syntax = "proto3";

option java_multiple_files = true;
option java_package = "sep3.project.protobuf";
option java_outer_classname = "FeedbackProto";

message Feedback{
  optional string id = 1;
  int32 grade = 2;
  string comment = 3;
}

message RequestAddFeedback{
  string handInId = 1;
  string studentUsername = 2;
  Feedback feedback = 3;
}
message ResponseGetFeedback{
  Feedback feedback = 1;
}
message RequestGetFeedbackById{
  string feedbackId = 1;
}
message RequestGetFeedbackByHandInIdAndStudentUsername{
  string handInId = 1;
  string studentUsername = 2;
}
message ResponseAddFeedback{
  Feedback feedback = 1;
}
service FeedbackService{
  rpc addFeedback(RequestAddFeedback) returns (Feedback);
  rpc getFeedbackById(RequestGetFeedbackById) returns (ResponseGetFeedback);
  rpc getFeedbackByHandInIdAndStudentUsername(RequestGetFeedbackByHandInIdAndStudentUsername) returns (ResponseGetFeedback);
}
